--- a/assets/css/words/word_index.css
+++ b/assets/css/words/word_index.css
@@ -29,7 +29,7 @@ body{
     transform: translateX(-50%);
 }
 
-    table {
+    .table__show-library {
         width: 100%;
 
         border-collapse: collapse;
@@ -43,17 +43,17 @@ body{
 
             margin-bottom:1.5rem;
         }
-        th, td {
+        .table__show-library th, .table__show-library td {
             text-align: left;
             padding: 1rem;
         }
     
         /* tr:nth-child(even){background-color: #f2f2f2} */
-        td{
+        .table__show-library td{
             color:#fff;
         }
         
-        th {
+        .table__show-library th {
             font-weight: 700;
             color: #dd5;
         }
@@ -131,4 +131,63 @@ body{
         position: absolute;
         top:-2%;
         right:0;
+    }
+
+#popup{
+    position: fixed;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    z-index: 9999;
+}
+
+    .popup__word-detail{
+        padding: 2rem 3rem;
+
+        text-align: center;
+
+        background-color: rgba(207, 207, 207, 0.99);
+        
+        border-radius: 3px;
+    }
+
+        .table__describe td{
+            padding:.2rem;
+
+            color:#000;
+        }
+
+        .word{
+            margin-bottom:.4rem;
+
+            font-size:2.2rem;
+
+            background-image: linear-gradient(to top, rgba(2,0,36,1) 0%, rgba(0,225,255,1) 0%, rgba(82,123,244,1) 53%, rgba(133,28,194,1) 96%);
+            -webkit-background-clip: text;
+            color:transparent   ;
+        }
+
+        .image{
+            margin-bottom:.4rem;
+        }
+
+        audio{
+            margin-top: 1rem;
+
+            width:15rem;
+            height:1.5rem;
+        }
+
+        #get-detail-ajax{
+            cursor: pointer;
+        }
+
+    .btn--close:link,.btn--close:visited{
+        position: absolute;
+        top:0;
+        right:0;
+
+        font-size:1.5rem;
+
+        color:#000;
     }
