--- a/assets/css/accounts/account_login.css
+++ b/assets/css/accounts/account_login.css
@@ -18,7 +18,7 @@ body{
 }
 
 .section-auth{
-    width: 20%;
+    width: 22%;
     height :80%;
     position: absolute;
     top:50%;
@@ -72,11 +72,16 @@ body{
 
             .form__label{
                 display: block;
+                
                 font-size:.8rem;
 
                 color:rgb(153, 153, 153);
             }
+                .account_id-warning,.repassword-warning,.form__warning{
+                    color:tomato;
+                }
 
+            
             .form__input{
                 width:100%;
 
