--- a/assets/css/accounts/account_login.css
+++ b/assets/css/accounts/account_login.css
@@ -113,6 +113,8 @@ body{
             display:flex;
             flex-direction: column;
 
+            position: relative;
+
             font-size:.9rem;
 
             color:rgb(153, 153, 153);
@@ -130,6 +132,7 @@ body{
             outline:none;
         }
 
+        
 
     .nav__change-view{
         position: absolute;
@@ -204,4 +207,17 @@ body{
 
 .right{
     border-bottom: 1.5px solid rgba(0,225,255,1);
+}
+
+.btn--disable{
+    width:100%;
+    height:100%;
+
+    position: absolute;
+    top:0;
+    left:0;
+    
+    cursor: not-allowed;
+    
+    background-color: transparent;
 }
